--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^3.11.1",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "lucide-react": "^0.563.0",
     "mongodb": "^7.0.0",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
